Dodanie tworzenie service_events

--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "dependencies": {
     "@dsb-norge/vue-keycloak-js": "1.1.2",
-    "axios": "0.18.1",
+    "axios": "^0.24.0",
     "axios-cache-adapter": "2.5.0",
     "core-js": "3.6.5",
     "currency-symbol-map": "4.0.4",
     "element-ui": "^2.14.2",
     "file-saver": "^2.0.5",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "marked": "^1.1.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
